--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,4 @@
-blinker==1.9.0
-certifi==2025.1.31
-charset-normalizer==3.4.1
-click==8.1.8
-colorama==0.4.6
-et_xmlfile==2.0.0
-Flask==3.1.0
-Flask-Login==0.6.3
-Flask-SQLAlchemy==3.1.1
-greenlet==3.2.3
-gunicorn==23.0.0
-idna==3.10
-itsdangerous==2.2.0
-Jinja2==3.1.6
-MarkupSafe==3.0.2
-mercadopago==2.3.0
-numpy==2.3.0
-nvidia-ml-py3==7.352.0
-openpyxl==3.1.5
-packaging==25.0
-pandas==2.3.0
-pillow==11.2.1
-psutil==7.0.0
-python-dateutil==2.9.0.post0
-pytz==2025.2
-qrcode==8.2
-requests==2.32.3
-six==1.17.0
-SQLAlchemy==2.0.41
-typing_extensions==4.14.0
-tzdata==2025.2
-urllib3==2.4.0
-Werkzeug==3.1.3
+Flask
+gunicorn
+mercadopago
+werkzeug
